cmake_minimum_required(VERSION 3.19)

project(costmap VERSION 1.0)

if(ANDROID)
set(OpenCV_DIR /home/antraume/costmap/opencv-3.4.3/build/love/sdk/native/jni/abi-arm64-v8a/)
endif(ANDROID)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)

find_package(OpenCV REQUIRED)
include_directories(include)
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${CMAKE_CURRENT_SOURCE_DIR} )
add_executable(test ${PROJECT_SOURCE_DIR}/test.cc)
add_library(costmap SHARED src/layer.cc src/costmap.cc)

if(ANDROID)
target_link_libraries(costmap /home/antraume/costmap/lib/libglog.so)
else()
target_link_libraries(costmap /lib/libglog.so)
endif(ANDROID)
target_link_libraries(test PUBLIC costmap)
target_link_libraries(costmap ${OpenCV_LIBS})
install(TARGETS costmap DESTINATION lib)
install(FILES /home/antraume/costmap/include/costmap.h DESTINATION include)
install(FILES /home/antraume/costmap/include/layer.h DESTINATION include)
install(FILES /home/antraume/costmap/costmap_config.yaml DESTINATION config)
