cmake_minimum_required(VERSION 3.19)

project(costmap VERSION 3.0)
configure_file(costmap_config.in costmap_config.h)

if(ANDROID)
set(OpenCV_DIR /home/antraume/costmap/opencv-3.4.3/build/love/sdk/native/jni/abi-arm64-v8a/)
set(CMAKE_CXX_FLAGS_RELEASE_INIT "-o3")
endif(ANDROID)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)

find_package(OpenCV REQUIRED)
include_directories(inc)
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_executable(test ${PROJECT_SOURCE_DIR}/test.cc)
add_library(costmap SHARED src/layer.cc src/costmap.cc)
add_library(ut SHARED src/layer.cc src/ut.cc)
add_library(laser SHARED src/layer.cc src/laser.cc)

if(ANDROID)
target_link_libraries(costmap /home/antraume/costmap/lib/libglog.so)
target_link_libraries(ut /home/antraume/costmap/lib/libglog.so)
target_link_libraries(laser /home/antraume/costmap/lib/libglog.so)
else()
target_link_libraries(costmap /lib/libglog.so)
endif(ANDROID)
target_link_libraries(test PUBLIC costmap ut laser)
target_link_libraries(costmap ${OpenCV_LIBS})
target_link_libraries(ut ${OpenCV_LIBS})
target_link_libraries(laser ${OpenCV_LIBS})
install(TARGETS costmap DESTINATION lib)
install(TARGETS ut DESTINATION lib)
install(TARGETS laser DESTINATION lib)
install(FILES ${PROJECT_SOURCE_DIR}/include/costmap.h DESTINATION include)
install(FILES ${PROJECT_SOURCE_DIR}/include/ut.h DESTINATION include)
install(FILES ${PROJECT_SOURCE_DIR}/include/layer.h DESTINATION include)
install(FILES ${PROJECT_SOURCE_DIR}/include/laser.h DESTINATION include)
install(FILES ${PROJECT_SOURCE_DIR}/costmap_config.yaml DESTINATION config)
install(FILES ${PROJECT_SOURCE_DIR}/ut_config.yaml DESTINATION config)
install(FILES ${PROJECT_SOURCE_DIR}/laser_config.yaml DESTINATION config)
